--- a/resource/css/code-index.css
+++ b/resource/css/code-index.css
@@ -192,7 +192,8 @@ button {
 
 .wrap{
   width: 100%;
-  height:100%;
+  min-height: 100%;
+  -webkit-overflow-scrolling:touch;
   overflow-x:hidden; 
   position: relative;
 }
@@ -227,7 +228,7 @@ button {
  color: #f45254;
 }
 .page-list{
-  padding-bottom:48px; 
+  padding-bottom:50px; 
 }
 .page-list li{  
   width: 100%;
